✨ feat(CJR): New feature :D
Added a presentation audio, a page icon and made other smaller and less significant style changes

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="icon" href="./assets/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +14,7 @@
 		<link rel="stylesheet" href="./styles/global.css" />
 		<link rel="stylesheet" href="./styles/mobile/small.css" />
 		<script src="https://kit.fontawesome.com/69e587e431.js" crossorigin="anonymous"></script>
-		<title>Gabriel - O Roberto</title>
+		<title>Gabriel - O Roberto ☕</title>
 	</head>
 	<body>
 		<header>
@@ -41,7 +42,12 @@
 
 		<main>
 			<section id="left-section" class="left-side">
-				<img id="spinning-cutter" src="./assets/left-me.jpeg" alt="Eu e minha vó" />
+				<picture class="image-holder">
+					<div id="presentation">
+						<i class="fa-solid fa-play"></i>
+					</div>
+					<img id="spinning-cutter" src="./assets/left-me.jpeg" alt="Eu e minha vó" />
+				</picture>
 				<div class="container">
 					<div class="greetings">
 						<h2>Tudo bem?</h2>
