🌈 style(CJR): Changed 'about me'
Changed 'Like coffee' for 'Like teaching'

--- a/html/index.html
+++ b/html/index.html
@@ -105,8 +105,8 @@
 									<p>Amo jogos de tabuleiro.</p>
 								</td>
 								<td tabindex="10">
-									<i class="fa-solid fa-mug-hot"></i>
-									<p>Café é gostoso, ponto.</p>
+									<i class="fa-solid fa-person-chalkboard"></i>
+									<p>Gosto de ensinar aquilo que sei.</p>
 								</td>
 								<td tabindex="10">
 									<i class="fa-solid fa-cat"></i>
