🐞 fix(CJR): Accessibility
Fixed acessibility problem at presentation audio's play button

--- a/html/index.html
+++ b/html/index.html
@@ -42,12 +42,12 @@
 
 		<main>
 			<section id="left-section" class="left-side">
-				<picture class="image-holder">
-					<figure id="presentation" tabindex="2" aria-label="Pressione para uma apresentação breve sobre mim">
+				<figure class="image-holder">
+					<button type="button" id="presentation" tabindex="2" aria-label="Pressione para uma apresentação breve sobre mim">
 						<i class="fa-solid fa-play"></i>
-					</figure>
+					</button>
 					<img id="spinning-cutter" src="./assets/left-me.jpeg" alt="Eu e minha vó" />
-				</picture>
+				</figure>
 				<div class="container">
 					<div class="greetings">
 						<h2>Tudo bem?</h2>
